<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/note_icon"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/prev"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@id/play"
            android:background="@drawable/round_buttons"
            android:text="@string/prev" />

        <Button
            android:id="@+id/play"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_buttons"
            android:text="@string/play" />

        <Button
            android:id="@+id/next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/play"
            android:background="@drawable/round_buttons"
            android:text="@string/next" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/play"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/curTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:text="@string/_0_00" />

        <TextView
            android:id="@+id/songLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekBar"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="30dp"
            android:text="@string/_2_00" />

        <Button
            android:id="@+id/list"
            android:layout_width="57dp"
            android:layout_height="35dp"
            android:layout_below="@+id/prev"
            android:layout_alignParentStart="true"
            android:layout_marginStart="9dp"
            android:layout_marginTop="49dp"
            android:text="@string/list" />

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/list"
            android:layout_alignParentStart="true"
            android:layout_marginStart="163dp"
            android:layout_marginBottom="-49dp"
            android:text="@string/songname" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="163dp"
            android:layout_marginBottom="106dp"
            android:text="@string/artistname" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>